Correct array of png names. Use dfsrender for steps 9 and up

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         const SHORT_NAMES = ["mri", "skull-stripped", "bias-corrected", "tissue labels", "cerebrum mask", "initial cortex mask", "scrubbed cortex",
             "topo-corrected", "inner cortex mask", "inner cortex"];//, "pial cortex", "labeled cortex");
         const STEP_NAMES = [".png", ".bse.png", ".bfc.png", ".pvc.label.png", ".cerebrum.png", ".init.cortex.png", ".cortex.scrubbed.png",
-            ".cortex.tca.png", ".cortex.dewisp.png", ".inner.cortex.jpg"];//, ".pial.cortex.jpg", ".mid.cortex.svreg.jpg");
+            ".cortex.tca.png", ".cortex.dewisp.png", ".inner.cortex.png", ".pial.cortex.png", ".left.png"];
 
 
         var selectedSubjectIndex = 0;
